--- a/code.ipynb
+++ b/code.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "code.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPmM0erNzi2lL4CXlOx9g7i"
+      "authorship_tag": "ABX9TyOcgRyCuoA+LgBtEJuUKoPR"
     },
     "kernelspec": {
       "name": "python3",
@@ -22,7 +22,7 @@
       },
       "source": [
         "import pandas as pd\n",
-        " "
+        "import nltk \n"
       ],
       "execution_count": 28,
       "outputs": []
@@ -282,7 +282,10 @@
         "colab": {}
       },
       "source": [
-        ""
+        "def process_text(event):\n",
+        "  # tokenization  \n",
+        "  tokens =  nltk.word_tokenize(event)\n",
+        "  print(tokens)\n"
       ],
       "execution_count": 22,
       "outputs": []
