--- a/code.ipynb
+++ b/code.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "code.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOcgRyCuoA+LgBtEJuUKoPR"
+      "authorship_tag": "ABX9TyNi8CiKzO6Vi2/Jahh+6DJ+"
     },
     "kernelspec": {
       "name": "python3",
@@ -22,9 +22,12 @@
       },
       "source": [
         "import pandas as pd\n",
-        "import nltk \n"
+        "import nltk \n",
+        "\n",
+        "from nltk.stem import WordNetLemmatizer\n",
+        "wordnet_lemmatizer = WordNetLemmatizer() "
       ],
-      "execution_count": 28,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -35,10 +38,10 @@
         "colab": {}
       },
       "source": [
-        "event_list = pd.read_csv(\"/content/input.csv\")\n",
+        "#event_list = pd.read_csv(\"/content/input.csv\")\n",
         "employee_list = pd.read_csv(\"/content/CCMLEmployeeData.csv\")"
       ],
-      "execution_count": 3,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -50,12 +53,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 677
         },
-        "outputId": "d135a2e3-bb73-4b60-82a9-7aac25630611"
+        "outputId": "2a13f8f7-f218-49ae-90c4-fb84d0cb2e0e"
       },
       "source": [
         "employee_list.head(20)"
       ],
-      "execution_count": 18,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -257,7 +260,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 33
         }
       ]
     },
@@ -271,7 +274,7 @@
       "source": [
         "event = \"Lockdown special courses on Ydemi. 22 hours left\""
       ],
-      "execution_count": 26,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -285,9 +288,13 @@
         "def process_text(event):\n",
         "  # tokenization  \n",
         "  tokens =  nltk.word_tokenize(event)\n",
-        "  print(tokens)\n"
+        "  print(tokens)\n",
+        "\n",
+        "  #lemmantization\n",
+        "  for w in tokens:\n",
+        "       print (\"Actual: %s  Lemma: %s\"  % (w,wordnet_lemmatizer.lemmatize(w)))"
       ],
-      "execution_count": 22,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -295,13 +302,34 @@
       "metadata": {
         "id": "aQsqi-y9JgJ4",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 201
+        },
+        "outputId": "914cddd7-b983-48bd-81bc-976f2bee96e8"
       },
       "source": [
-        ""
+        "process_text(event)"
       ],
-      "execution_count": 28,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['Lockdown', 'special', 'courses', 'on', 'Ydemi', '.', '22', 'hours', 'left']\n",
+            "Actual: Lockdown  Lemma: Lockdown\n",
+            "Actual: special  Lemma: special\n",
+            "Actual: courses  Lemma: course\n",
+            "Actual: on  Lemma: on\n",
+            "Actual: Ydemi  Lemma: Ydemi\n",
+            "Actual: .  Lemma: .\n",
+            "Actual: 22  Lemma: 22\n",
+            "Actual: hours  Lemma: hour\n",
+            "Actual: left  Lemma: left\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
