--- a/code.ipynb
+++ b/code.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "code.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNi8CiKzO6Vi2/Jahh+6DJ+"
+      "authorship_tag": "ABX9TyP+5GQ768uqu43XfETaCdCw"
     },
     "kernelspec": {
       "name": "python3",
@@ -18,17 +18,37 @@
       "metadata": {
         "id": "Gi4DGTC567g0",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "68ff3a59-3d05-4d31-81b6-a0582650c23f"
       },
       "source": [
         "import pandas as pd\n",
         "import nltk \n",
         "\n",
+        "#nltk.download('punkt')\n",
+        "#nltk.download('wordnet')\n",
+        "#nltk.download('stopwords')\n",
+        "\n",
         "from nltk.stem import WordNetLemmatizer\n",
-        "wordnet_lemmatizer = WordNetLemmatizer() "
+        "from nltk.corpus import stopwords \n",
+        "\n",
+        "wordnet_lemmatizer = WordNetLemmatizer()\n",
+        "stop_words = set(stopwords.words('english')) "
       ],
-      "execution_count": 29,
-      "outputs": []
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -288,13 +308,19 @@
         "def process_text(event):\n",
         "  # tokenization  \n",
         "  tokens =  nltk.word_tokenize(event)\n",
-        "  print(tokens)\n",
         "\n",
         "  #lemmantization\n",
         "  for w in tokens:\n",
-        "       print (\"Actual: %s  Lemma: %s\"  % (w,wordnet_lemmatizer.lemmatize(w)))"
+        "       wordnet_lemmatizer.lemmatize(w)\n",
+        "       \n",
+        "       # removing stop words \n",
+        "       filtered_sentence = []\n",
+        "       if w not in stop_words: \n",
+        "         filtered_sentence.append(w) \n",
+        "         print(filtered_sentence)\n",
+        "      "
       ],
-      "execution_count": 35,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -304,28 +330,27 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 201
+          "height": 182
         },
-        "outputId": "914cddd7-b983-48bd-81bc-976f2bee96e8"
+        "outputId": "0347b6b0-a996-472f-9e33-62bae1e0e472"
       },
       "source": [
         "process_text(event)"
       ],
-      "execution_count": 36,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "['Lockdown', 'special', 'courses', 'on', 'Ydemi', '.', '22', 'hours', 'left']\n",
-            "Actual: Lockdown  Lemma: Lockdown\n",
-            "Actual: special  Lemma: special\n",
-            "Actual: courses  Lemma: course\n",
-            "Actual: on  Lemma: on\n",
-            "Actual: Ydemi  Lemma: Ydemi\n",
-            "Actual: .  Lemma: .\n",
-            "Actual: 22  Lemma: 22\n",
-            "Actual: hours  Lemma: hour\n",
-            "Actual: left  Lemma: left\n"
+            "['Lockdown']\n",
+            "['special']\n",
+            "['courses']\n",
+            "['Ydemi']\n",
+            "['.']\n",
+            "['22']\n",
+            "['hours']\n",
+            "['left']\n"
           ],
           "name": "stdout"
         }
