--- a/code.ipynb
+++ b/code.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "code.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNqBM+FUmvL1hwIjHOQ/fLH"
+      "authorship_tag": "ABX9TyNwUES4qFG2Jbda7hpBe8sv"
     },
     "kernelspec": {
       "name": "python3",
@@ -18,11 +18,7 @@
       "metadata": {
         "id": "Gi4DGTC567g0",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 54
-        },
-        "outputId": "68ff3a59-3d05-4d31-81b6-a0582650c23f"
+        "colab": {}
       },
       "source": [
         "import pandas as pd\n",
@@ -35,20 +31,13 @@
         "from nltk.stem import WordNetLemmatizer\n",
         "from nltk.corpus import stopwords \n",
         "\n",
+        "import string\n",
+        "\n",
         "wordnet_lemmatizer = WordNetLemmatizer()\n",
         "stop_words = set(stopwords.words('english')) "
       ],
-      "execution_count": 38,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 72,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -294,7 +283,7 @@
       "source": [
         "event = \"Lockdown special courses on Ydemi. 22 hours left\""
       ],
-      "execution_count": 34,
+      "execution_count": 73,
       "outputs": []
     },
     {
@@ -305,7 +294,9 @@
         "colab": {}
       },
       "source": [
+        "\n",
         "def process_text(event):\n",
+        "\n",
         "  # tokenization  \n",
         "  tokens =  nltk.word_tokenize(event)\n",
         "\n",
@@ -313,15 +304,19 @@
         "  for w in tokens:\n",
         "       wordnet_lemmatizer.lemmatize(w)\n",
         "       \n",
-        "       # removing stop words \n",
+        "       # removing stop words\n",
         "       filtered_sentence = []\n",
-        "       \n",
+        "\n",
         "       if w not in stop_words: \n",
-        "         filtered_sentence.append(w) \n",
-        "        \n",
-        "      "
+        "         filtered_sentence.append(w)\n",
+        "       \n",
+        "       # remove punctuations and empty strings\n",
+        "       filtered_sentence = [''.join(c for c in s if c not in string.punctuation) for s in filtered_sentence]\n",
+        "       filtered_sentence = [s for s in filtered_sentence if s]  \n",
+        " \n",
+        "       print(filtered_sentence)      "
       ],
-      "execution_count": 42,
+      "execution_count": 74,
       "outputs": []
     },
     {
@@ -331,14 +326,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 164
+          "height": 182
         },
-        "outputId": "1f5af250-a134-41e0-f3c7-e4bf91165fed"
+        "outputId": "324d517b-ab2d-4dd9-a39d-673f8af1800e"
       },
       "source": [
         "process_text(event)"
       ],
-      "execution_count": 43,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "stream",
@@ -346,8 +341,9 @@
             "['Lockdown']\n",
             "['special']\n",
             "['courses']\n",
+            "[]\n",
             "['Ydemi']\n",
-            "['.']\n",
+            "[]\n",
             "['22']\n",
             "['hours']\n",
             "['left']\n"
@@ -366,7 +362,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 75,
       "outputs": []
     }
   ]
