text processing complete

--- a/code.ipynb
+++ b/code.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "code.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNwUES4qFG2Jbda7hpBe8sv"
+      "authorship_tag": "ABX9TyNDLfjgBlaaPys3tEGm8LEH"
     },
     "kernelspec": {
       "name": "python3",
@@ -281,9 +281,9 @@
         "colab": {}
       },
       "source": [
-        "event = \"Lockdown special courses on Ydemi. 22 hours left\""
+        "event = \"Get a System Administration certification from PurpleHat today.\""
       ],
-      "execution_count": 73,
+      "execution_count": 76,
       "outputs": []
     },
     {
@@ -294,29 +294,30 @@
         "colab": {}
       },
       "source": [
-        "\n",
         "def process_text(event):\n",
         "\n",
         "  # tokenization  \n",
         "  tokens =  nltk.word_tokenize(event)\n",
+        "  filtered_sentence = []\n",
         "\n",
         "  #lemmantization\n",
         "  for w in tokens:\n",
-        "       wordnet_lemmatizer.lemmatize(w)\n",
-        "       \n",
-        "       # removing stop words\n",
-        "       filtered_sentence = []\n",
+        "    wordnet_lemmatizer.lemmatize(w)\n",
+        "    \n",
+        "    # convert to lower\n",
+        "    w.lower()\n",
         "\n",
-        "       if w not in stop_words: \n",
-        "         filtered_sentence.append(w)\n",
-        "       \n",
-        "       # remove punctuations and empty strings\n",
-        "       filtered_sentence = [''.join(c for c in s if c not in string.punctuation) for s in filtered_sentence]\n",
-        "       filtered_sentence = [s for s in filtered_sentence if s]  \n",
+        "    # removing stop words\n",
+        "    if w not in stop_words: \n",
+        "        filtered_sentence.append(w)\n",
+        "          \n",
+        "    # remove punctuations and empty strings\n",
+        "    filtered_sentence = [''.join(c for c in s if c not in string.punctuation) for s in filtered_sentence]\n",
+        "    filtered_sentence = [s for s in filtered_sentence if s]  \n",
         " \n",
-        "       print(filtered_sentence)      "
+        "  return filtered_sentence   "
       ],
-      "execution_count": 74,
+      "execution_count": 90,
       "outputs": []
     },
     {
@@ -326,29 +327,26 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 182
+          "height": 35
         },
-        "outputId": "324d517b-ab2d-4dd9-a39d-673f8af1800e"
+        "outputId": "b38cbeff-2934-445b-f774-288de93ebc1d"
       },
       "source": [
         "process_text(event)"
       ],
-      "execution_count": 75,
+      "execution_count": 91,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "['Lockdown']\n",
-            "['special']\n",
-            "['courses']\n",
-            "[]\n",
-            "['Ydemi']\n",
-            "[]\n",
-            "['22']\n",
-            "['hours']\n",
-            "['left']\n"
-          ],
-          "name": "stdout"
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Get', 'System', 'Administration', 'certification', 'PurpleHat', 'today']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 91
         }
       ]
     },
