--- a/code.ipynb
+++ b/code.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "code.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNDLfjgBlaaPys3tEGm8LEH"
+      "authorship_tag": "ABX9TyP5g+Aru5idqOPy61iAQiUs"
     },
     "kernelspec": {
       "name": "python3",
@@ -50,24 +50,24 @@
         "#event_list = pd.read_csv(\"/content/input.csv\")\n",
         "employee_list = pd.read_csv(\"/content/CCMLEmployeeData.csv\")"
       ],
-      "execution_count": 32,
+      "execution_count": 106,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eUZ524NPKHbv",
+        "id": "nz4lG0tfBxe0",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 677
+          "height": 424
         },
-        "outputId": "2a13f8f7-f218-49ae-90c4-fb84d0cb2e0e"
+        "outputId": "af3fd05c-1cff-40ec-ab3e-435d458e15e8"
       },
       "source": [
-        "employee_list.head(20)"
+        "employee_list"
       ],
-      "execution_count": 33,
+      "execution_count": 93,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -134,142 +134,215 @@
               "      <td>Certifications</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>Angela Stokes</td>\n",
-              "      <td>Higher Education</td>\n",
-              "      <td>Workshops</td>\n",
-              "      <td>Seminars</td>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>6</th>\n",
-              "      <td>Curtis Ortega</td>\n",
-              "      <td>IoT</td>\n",
-              "      <td>Certifications</td>\n",
-              "      <td>Courses</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7</th>\n",
-              "      <td>Andrew Cox</td>\n",
+              "      <th>178</th>\n",
+              "      <td>Katelyn Barnes</td>\n",
               "      <td>Coding</td>\n",
-              "      <td>Jobs</td>\n",
-              "      <td>Certifications</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>8</th>\n",
-              "      <td>Russell Vargas</td>\n",
-              "      <td>Java</td>\n",
-              "      <td>Trainings</td>\n",
-              "      <td>Expos</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>9</th>\n",
-              "      <td>David Foster</td>\n",
-              "      <td>Security</td>\n",
-              "      <td>Certifications</td>\n",
               "      <td>Courses</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>10</th>\n",
-              "      <td>Pamela Burton</td>\n",
-              "      <td>Web Development</td>\n",
-              "      <td>Internships</td>\n",
-              "      <td>Fests</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>11</th>\n",
-              "      <td>Joshua Miller</td>\n",
-              "      <td>Management</td>\n",
-              "      <td>Jobs</td>\n",
-              "      <td>Certifications</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>12</th>\n",
-              "      <td>Deborah Young</td>\n",
-              "      <td>Artificial Intelligence</td>\n",
-              "      <td>Expos</td>\n",
               "      <td>Webinars</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>13</th>\n",
-              "      <td>Ann Morris</td>\n",
-              "      <td>Management</td>\n",
-              "      <td>Seminars</td>\n",
-              "      <td>Expos</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>14</th>\n",
-              "      <td>David Cox</td>\n",
-              "      <td>Python</td>\n",
-              "      <td>Hackathons</td>\n",
-              "      <td>Jobs</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>15</th>\n",
-              "      <td>Chelsea Smith</td>\n",
-              "      <td>Python</td>\n",
-              "      <td>Workshops</td>\n",
-              "      <td>Seminars</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>16</th>\n",
-              "      <td>Corey Beck</td>\n",
-              "      <td>Artificial Intelligence</td>\n",
-              "      <td>Competitions</td>\n",
-              "      <td>Trainings</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>17</th>\n",
-              "      <td>Lisa Roberts</td>\n",
-              "      <td>Finance</td>\n",
+              "      <th>179</th>\n",
+              "      <td>Gabriel Cruz</td>\n",
+              "      <td>Other</td>\n",
+              "      <td>Talks</td>\n",
               "      <td>Fests</td>\n",
-              "      <td>Certifications</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>18</th>\n",
-              "      <td>Christine Potter</td>\n",
-              "      <td>Mobile Applications</td>\n",
-              "      <td>Certifications</td>\n",
-              "      <td>Courses</td>\n",
+              "      <th>180</th>\n",
+              "      <td>Christina Williams</td>\n",
+              "      <td>Software Architecture</td>\n",
+              "      <td>Talks</td>\n",
+              "      <td>Fests</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>19</th>\n",
-              "      <td>Valerie Yang</td>\n",
-              "      <td>Higher Education</td>\n",
-              "      <td>Internships</td>\n",
+              "      <th>181</th>\n",
+              "      <td>William Turner</td>\n",
+              "      <td>Development Processes</td>\n",
+              "      <td>Trainings</td>\n",
               "      <td>Seminars</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>182</th>\n",
+              "      <td>Damon Lane</td>\n",
+              "      <td>C</td>\n",
+              "      <td>Seminars</td>\n",
+              "      <td>Internships</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
+              "<p>183 rows × 4 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "                Name                   Domain          Event1          Event2\n",
-              "0        Bryan Brock               Management            Jobs      Hackathons\n",
-              "1    Joseph Sullivan                   Coding  Certifications        Webinars\n",
-              "2      Sherri Dawson                 Security     Internships           Fests\n",
-              "3    Dustin Ferguson                 Hardware    Competitions        Webinars\n",
-              "4        Kayla Young          Web Development           Expos  Certifications\n",
-              "5      Angela Stokes         Higher Education       Workshops        Seminars\n",
-              "6      Curtis Ortega                      IoT  Certifications         Courses\n",
-              "7         Andrew Cox                   Coding            Jobs  Certifications\n",
-              "8     Russell Vargas                     Java       Trainings           Expos\n",
-              "9       David Foster                 Security  Certifications         Courses\n",
-              "10     Pamela Burton          Web Development     Internships           Fests\n",
-              "11     Joshua Miller               Management            Jobs  Certifications\n",
-              "12     Deborah Young  Artificial Intelligence           Expos        Webinars\n",
-              "13        Ann Morris               Management        Seminars           Expos\n",
-              "14         David Cox                   Python      Hackathons            Jobs\n",
-              "15     Chelsea Smith                   Python       Workshops        Seminars\n",
-              "16        Corey Beck  Artificial Intelligence    Competitions       Trainings\n",
-              "17      Lisa Roberts                  Finance           Fests  Certifications\n",
-              "18  Christine Potter      Mobile Applications  Certifications         Courses\n",
-              "19      Valerie Yang         Higher Education     Internships        Seminars"
+              "                   Name                 Domain          Event1          Event2\n",
+              "0           Bryan Brock             Management            Jobs      Hackathons\n",
+              "1       Joseph Sullivan                 Coding  Certifications        Webinars\n",
+              "2         Sherri Dawson               Security     Internships           Fests\n",
+              "3       Dustin Ferguson               Hardware    Competitions        Webinars\n",
+              "4           Kayla Young        Web Development           Expos  Certifications\n",
+              "..                  ...                    ...             ...             ...\n",
+              "178      Katelyn Barnes                 Coding         Courses        Webinars\n",
+              "179        Gabriel Cruz                  Other           Talks           Fests\n",
+              "180  Christina Williams  Software Architecture           Talks           Fests\n",
+              "181      William Turner  Development Processes       Trainings        Seminars\n",
+              "182          Damon Lane                      C        Seminars     Internships\n",
+              "\n",
+              "[183 rows x 4 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 93
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CoeR7CGQBe8p",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 424
+        },
+        "outputId": "a5dd5cdc-af65-449f-c4e0-a6bdb0c36691"
+      },
+      "source": [
+        "# cleaning datafile\n",
+        "employee_list['Event1'] = employee_list['Domain']+\" \"+  employee_list['Event1']\n",
+        "employee_list['Event2'] = employee_list['Domain']+\" \"+  employee_list['Event2']\n",
+        "employee_list.drop(\"Domain\",axis = 1)"
+      ],
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Name</th>\n",
+              "      <th>Event1</th>\n",
+              "      <th>Event2</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Bryan Brock</td>\n",
+              "      <td>Management Jobs</td>\n",
+              "      <td>Management Hackathons</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Joseph Sullivan</td>\n",
+              "      <td>Coding Certifications</td>\n",
+              "      <td>Coding Webinars</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Sherri Dawson</td>\n",
+              "      <td>Security Internships</td>\n",
+              "      <td>Security Fests</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Dustin Ferguson</td>\n",
+              "      <td>Hardware Competitions</td>\n",
+              "      <td>Hardware Webinars</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Kayla Young</td>\n",
+              "      <td>Web Development Expos</td>\n",
+              "      <td>Web Development Certifications</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>178</th>\n",
+              "      <td>Katelyn Barnes</td>\n",
+              "      <td>Coding Courses</td>\n",
+              "      <td>Coding Webinars</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>179</th>\n",
+              "      <td>Gabriel Cruz</td>\n",
+              "      <td>Other Talks</td>\n",
+              "      <td>Other Fests</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>180</th>\n",
+              "      <td>Christina Williams</td>\n",
+              "      <td>Software Architecture Talks</td>\n",
+              "      <td>Software Architecture Fests</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>181</th>\n",
+              "      <td>William Turner</td>\n",
+              "      <td>Development Processes Trainings</td>\n",
+              "      <td>Development Processes Seminars</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>182</th>\n",
+              "      <td>Damon Lane</td>\n",
+              "      <td>C Seminars</td>\n",
+              "      <td>C Internships</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>183 rows × 3 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                   Name  ...                          Event2\n",
+              "0           Bryan Brock  ...           Management Hackathons\n",
+              "1       Joseph Sullivan  ...                 Coding Webinars\n",
+              "2         Sherri Dawson  ...                  Security Fests\n",
+              "3       Dustin Ferguson  ...               Hardware Webinars\n",
+              "4           Kayla Young  ...  Web Development Certifications\n",
+              "..                  ...  ...                             ...\n",
+              "178      Katelyn Barnes  ...                 Coding Webinars\n",
+              "179        Gabriel Cruz  ...                     Other Fests\n",
+              "180  Christina Williams  ...     Software Architecture Fests\n",
+              "181      William Turner  ...  Development Processes Seminars\n",
+              "182          Damon Lane  ...                   C Internships\n",
+              "\n",
+              "[183 rows x 3 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 107
         }
       ]
     },
