--- a/code.ipynb
+++ b/code.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "code.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP5g+Aru5idqOPy61iAQiUs"
+      "authorship_tag": "ABX9TyOJfEG1o3d8eLxigj86a5+2"
     },
     "kernelspec": {
       "name": "python3",
@@ -347,6 +347,53 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7wc9VyUhKF4U",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Model no. 1(for event 1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "59VDEp5_FFQD",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "data = employee_list.drop('Event2',axis = 1)"
+      ],
+      "execution_count": 109,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LGJvZkV0EGQ5",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "\n",
+        "x_train, x_test, y_train, y_test = train_test_split(data['Event1'], data['Name'], train_size=0.8)\n",
+        "vectorizer = TfidfVectorizer().fit(x_train)\n",
+        "x_train_v = vectorizer.transform(x_train)\n",
+        "x_test_v  = vectorizer.transform(x_test)\n",
+        "\n",
+        "model = LogisticRegression()     \n",
+        "model.fit(x_train_v, y_train)    \n",
+        "y_pred = model.predict(x_test_v)\n"
+      ],
+      "execution_count": 148,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Ojmh0vMq72HZ",
@@ -354,9 +401,9 @@
         "colab": {}
       },
       "source": [
-        "event = \"Get a System Administration certification from PurpleHat today.\""
+        "event = \"python certification\""
       ],
-      "execution_count": 76,
+      "execution_count": 142,
       "outputs": []
     },
     {
@@ -398,42 +445,59 @@
       "metadata": {
         "id": "aQsqi-y9JgJ4",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "b38cbeff-2934-445b-f774-288de93ebc1d"
+        "colab": {}
       },
       "source": [
-        "process_text(event)"
+        "test1 = process_text(event)"
       ],
-      "execution_count": 91,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['Get', 'System', 'Administration', 'certification', 'PurpleHat', 'today']"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 91
-        }
-      ]
+      "execution_count": 143,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "YgEuF2SfJjj0",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "92f3a4f1-bc86-4d87-e6da-a237df302587"
+      },
+      "source": [
+        "from nltk.tokenize.treebank import TreebankWordDetokenizer\n",
+        "TreebankWordDetokenizer().detokenize(test1)"
+      ],
+      "execution_count": 144,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'python certification'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 144
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XFGjiaBKHq0O",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "test1 = vectorizer.transform(test1)"
       ],
-      "execution_count": 75,
+      "execution_count": 145,
       "outputs": []
     }
   ]
