--- a/code.ipynb
+++ b/code.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "code.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOJfEG1o3d8eLxigj86a5+2"
+      "authorship_tag": "ABX9TyOJ9vuHF1XFzlCOYHwdyKpX"
     },
     "kernelspec": {
       "name": "python3",
@@ -390,20 +390,54 @@
         "model.fit(x_train_v, y_train)    \n",
         "y_pred = model.predict(x_test_v)\n"
       ],
-      "execution_count": 148,
+      "execution_count": 154,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MA3rpaOhLqhr",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Model no.2(for event 2)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bRUpwq00L3Ex",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "data2 = employee_list.drop('Event1',axis = 1)"
+      ],
+      "execution_count": 155,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ojmh0vMq72HZ",
+        "id": "rMo5QrI_LzFh",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "event = \"python certification\""
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "\n",
+        "x_train, x_test, y_train, y_test = train_test_split(data2['Event2'], data2['Name'], train_size=0.8)\n",
+        "vectorizer = TfidfVectorizer().fit(x_train)\n",
+        "x_train_v = vectorizer.transform(x_train)\n",
+        "x_test_v  = vectorizer.transform(x_test)\n",
+        "\n",
+        "model2 = LogisticRegression()     \n",
+        "model2.fit(x_train_v, y_train)    \n",
+        "y_pred = model2.predict(x_test_v)"
       ],
-      "execution_count": 142,
+      "execution_count": 156,
       "outputs": []
     },
     {
