--- a/code.ipynb
+++ b/code.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "code.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOJ9vuHF1XFzlCOYHwdyKpX"
+      "authorship_tag": "ABX9TyO+6fzYDwhLmLqA7Y/nVhMR"
     },
     "kernelspec": {
       "name": "python3",
@@ -30,13 +30,14 @@
         "\n",
         "from nltk.stem import WordNetLemmatizer\n",
         "from nltk.corpus import stopwords \n",
+        "from nltk.tokenize.treebank import TreebankWordDetokenizer\n",
         "\n",
         "import string\n",
         "\n",
         "wordnet_lemmatizer = WordNetLemmatizer()\n",
         "stop_words = set(stopwords.words('english')) "
       ],
-      "execution_count": 72,
+      "execution_count": 167,
       "outputs": []
     },
     {
@@ -47,7 +48,7 @@
         "colab": {}
       },
       "source": [
-        "#event_list = pd.read_csv(\"/content/input.csv\")\n",
+        "input = pd.read_csv(\"/content/sample_input.csv\")\n",
         "employee_list = pd.read_csv(\"/content/CCMLEmployeeData.csv\")"
       ],
       "execution_count": 106,
@@ -471,7 +472,7 @@
         " \n",
         "  return filtered_sentence   "
       ],
-      "execution_count": 90,
+      "execution_count": 214,
       "outputs": []
     },
     {
@@ -482,56 +483,55 @@
         "colab": {}
       },
       "source": [
-        "test1 = process_text(event)"
+        "Event ={ \"Event\" :[\"Get a System Administration certification from PurpleHat today.\",\"Lockdown special courses on Ydemi. 22 hours left!\",\n",
+        "         \"CodeBoost codeathon is live now!\"]}\n",
+        "input = pd.DataFrame(Event)         "
       ],
-      "execution_count": 143,
+      "execution_count": 177,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YgEuF2SfJjj0",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 36
-        },
-        "outputId": "92f3a4f1-bc86-4d87-e6da-a237df302587"
-      },
-      "source": [
-        "from nltk.tokenize.treebank import TreebankWordDetokenizer\n",
-        "TreebankWordDetokenizer().detokenize(test1)"
-      ],
-      "execution_count": 144,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'python certification'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 144
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "XFGjiaBKHq0O",
+        "id": "5K5nNnoy0BLj",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "test1 = vectorizer.transform(test1)"
+        "def create_list(emp_list):\n",
+        "  dt= {'Employees': emp_list}\n",
+        "  df = pd.DataFrame(dt)\n",
+        "  final_list = pd.concat([input, df], axis=1)\n",
+        "  final_list.to_excel( r'\\Final_list.xlsx',\n",
+        "                  sheet_name= 'sheet1'\n",
+        "                )\n"
       ],
-      "execution_count": 145,
+      "execution_count": 257,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rhwyIQzDVKPR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "emp_list= []\n",
+        "for i in input.index:\n",
+        "  employees = []\n",
+        "  test = input['Event'][i]\n",
+        "  #test = process_text(test)\n",
+        "  TreebankWordDetokenizer().detokenize(test)\n",
+        "  test = [test]\n",
+        "  test = vectorizer.transform(test)\n",
+        "\n",
+        "  employees.append(model.predict(test))\n",
+        "  employees.append(model2.predict(test))\n",
+        "  emp_list.append(list(employees))\n",
+        "create_list(emp_list)"
+      ],
+      "execution_count": 258,
       "outputs": []
     }
   ]
